-Added border class

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,3 +30,8 @@ h1 {
   outline: 1px solid white;
   font-family: "Roboto Condensed", sans-serif;
 }
+
+.border {
+  color: #263238;
+  border-radius: 10px;
+}
